--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -12,5 +12,9 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "hardhat": "^2.10.1"
+  },
+  "dependencies": {
+    "@zoralabs/nft-drop-contracts": "^1.0.1",
+    "dotenv": "^16.0.1"
   }
 }
