--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "dependencies": {
     "@livepeer/video-nft": "^0.3.6",
+    "@rainbow-me/rainbowkit": "^0.4.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@zoralabs/zdk": "^2.1.4",
     "@zoralabs/nft-drop-contracts": "^1.0.1",
+    "@zoralabs/zdk": "^2.1.4",
     "dotenv": "^10.0.0",
     "ethers": "^5.6.9",
     "ethers-utils": "^2.1.11",
