--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -8,14 +8,18 @@
     "@metamask/onboarding": "^1.0.1",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
+    "@rainbow-me/rainbowkit": "^0.4.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ethers": "^5.6.9",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "wagmi": "^0.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
