--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@livepeer/video-nft": "^0.3.6",
     "@metamask/onboarding": "^1.0.1",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
@@ -12,6 +13,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zoralabs/nft-drop-contracts": "^1.0.1",
+    "env": "0.0.2",
     "ethers": "^5.6.9",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
