--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@zoralabs/nft-drop-contracts": "^1.0.1",
     "@zoralabs/zdk": "^2.1.4",
+    "axios": "^0.27.2",
     "dotenv": "^10.0.0",
     "ethers": "^5.6.9",
     "ethers-utils": "^2.1.11",
