--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@zoralabs/nft-drop-contracts": "^1.0.1",
+    "@zoralabs/nft-hooks": "^0.8.1",
     "env": "0.0.2",
     "ethers": "^5.6.9",
     "prettier": "^2.7.1",
